Stability improvements